# asterisk-gui-2.0

./: COPYING  Makefile  README  acinclude.m4  cdr.html  configure.ac  providers.conf.sample  requests.txt  security.txt
branches/2.0/: CREDITS  LICENSE  Makefile  README  bootstrap.sh  configure  makeopts.in  requests.txt
branches/2.0/config/: asterisklogs.html  backup.html  bulkadd.html  callingrules.html  callparking.html  cdr.html  cli.html  configure_gui.html  date.html  dialplans.html  directory.html  emailsettings.html  features.html  features2.html  feditor.html  flashupdate.html  flipadvanced.html  followme.html  gtalk.html  hardware.html  hardware_aa50.html  hardware_dahdi.html  home.html  iax.html  incoming.html  index.html  language.html  meetme.html  menuprompts_record.html  menuprompts_upload.html  menus.html  misdn.html  mohfiles.html  networking.html  paging.html  password.html  preferences.html  queues.html  reboot.html  reset_defaults.html  (+23 more)
branches/2.0/config/js/: astman.js  astman2.js  backup.js  bulkadd.js  callingrules.js  dialplans.js  features.js  features2.js  feditor.js  flashupdate.js  followme.js  hardware.js  hardware_aa50.js  hardware_dahdi.js  iax.js  incoming.js  index.js  jquery.js  log.js  meetme.js  menuprompts_record.js  menuprompts_upload.js  menus.js  misdn.js  mohfiles.js  object.customs.js  paging.js  pbx.js  pbx2.js  preferences.js  providers.js  queues.js  registerg729.js  ringgroups.js  session.js  sip.js  status.js  sysinfo.js  timeintervals.js  timezone.js  (+8 more)
branches/2.0/developer_info/: CODING-GUIDELINES  CONFIG-ASSUMPTIONS  Flow Chart.odp
branches/2.0/other/: sqlite.js
branches/2.0/scripts/: detectdahdi.sh  dldsoundpack  gui_sysinfo  listfiles  restorebackup  takebackup
build_tools/: make_guiversion  make_version
config/: asterisklogs.html  backup.html  bulkadd.html  callingrules.html  cdr.html  configure_gui.html  dialplans.html  digital.html  emailsettings.html  features.html  features2.html  feditor.html  flashupdate.html  flipadvanced.html  followme.html  gtalk.html  guialert.html  hardware.html  hardware_aa50.html  hardware_dahdi.html  home.html  iax.html  incoming.html  index.html  language.html  meetme.html  menuprompts_record.html  menuprompts_upload.html  menus.html  misdn.html  mohfiles.html  monitor.html  networking.html  paging.html  password.html  preferences.html  queues.html  reboot.html  registerg729.html  ringgroups.html  (+18 more)
config/js/: astman.js  astman2.js  backup.js  bulkadd.js  callingrules.js  cdr.js  dialplans.js  features.js  features2.js  flashupdate.js  followme.js  hardware.js  hardware_aa50.js  hardware_dahdi.js  iax.js  incoming.js  index.js  jquery.js  log.js  meetme.js  menuprompts_upload.js  menus.js  misdn.js  mohfiles.js  networking.js  object.customs.js  paging.js  pbx.js  pbx2.js  preferences.js  registerg729.js  ringgroups.js  session.js  sip.js  sysinfo.js  timeintervals.js  timezone.js  tooltip.js  trunks_analog.js  trunks_providers.js  (+6 more)
config/stylesheets/: schwing.css  ui-tabs.css
developer_info/: CODE-ORGANIZATION  CODING-GUIDELINES  CONFIG-ASSUMPTIONS  Flow Chart.odp
scripts/: editmisdn.sh  editzap.sh  listfiles  restorebackup  takebackup
